--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.2.0",
     "flag-icon-css": "^4.1.5",
     "i18next": "^21.8.16",
@@ -17,9 +18,13 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
     "react-icons": "^4.4.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.4",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
