--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
     "react-icons": "^4.4.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
