--- a/package.json
+++ b/package.json
@@ -7,12 +7,26 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "await": "^0.2.6",
     "axios": "^1.6.7",
+    "body-parser": "~1.17.1",
     "bootstrap": "^5.2.0",
+    "config": "^1.31.0",
+    "cookie-parser": "^1.4.4",
+    "dateformat": "^2.2.0",
+    "debug": "^3.2.6",
+    "express": "^4.17.1",
     "flag-icon-css": "^4.1.5",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "jade": "~1.11.0",
+    "jquery": "^3.4.0",
+    "md5": "^2.2.1",
+    "moment": "^2.29.4",
+    "morgan": "~1.8.1",
+    "node-fetch": "^2.6.9",
+    "qs": "^6.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -26,6 +40,10 @@
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "request": "^2.88.2",
+    "serve-favicon": "^2.4.5",
+    "set-tz": "^0.2.0",
+    "sha256": "^0.2.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
@@ -52,5 +70,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "1. Cài đặt nodejs lên máy cần chạy. Download nodejs tại: https://nodejs.org/en/\r 2. Vào command (cmd) và chuyển tới thư mục code demo\r 3. Cài đặt module cần thiết bằng lệnh: npm install\r 4. Cấu hình giá trị cho các tham số: vnp_TmnCode,vnp_HashSecret trong file\\vnpay_nodejs\\config\\default.json. Nếu chưa có các thông tin này, vui lòng liên hệ với VNPAY\r 5. Chạy ứng dụng: npm start app.js. Ứng dụng sẽ start ở port 8888.\r 6. Mở trình duyệt và truy cập vào địa chỉ: http://localhost:8888 để bắt đầu chạy demo\r 7. Thông tin hướng dẫn kết nối tham khảo thêm tại địa chỉ: https://sandbox.vnpayment.vn/apis/",
+  "main": "app.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
